--- a/ORMFlaskProject/base/templates/home.html
+++ b/ORMFlaskProject/base/templates/home.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <h1>Home page</h1>
-{#   <form>#}
-{#       <a href="/load_category"> Add Category</a>#}
-{##}
-{#   </form>#}
-</body>
+    <form>
+        <a href="/add_category"> Add Category</a>
+ 
+    </form>
 </html>
