--- a/ORMFlaskProject/base/templates/addCategory.html
+++ b/ORMFlaskProject/base/templates/addCategory.html
@@ -10,6 +10,6 @@
     Description:<input type="text" name="description"><br><br>
     <input type="submit" value="SUBMIT">
 </form>
-<a href="/searchCategory"><button>search Category </button></a>
+<a href="/searchCategory">search Category</a>
 </body>
 </html>
