--- a/ORMFlaskProject/base/templates/home.html
+++ b/ORMFlaskProject/base/templates/home.html
@@ -6,8 +6,10 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <form>
-        <a href="/add_category"> Add Category</a>
- 
-    </form>
+   <form>
+       <a href="/add_category"> Add Category</a><br>
+       <a href="/load_subcategory">Add Sub Category</a>
+
+   </form>
+</body>
 </html>
